Fix layout issues in contact.tsx

--- a/src/Component/Contact/Contact.scss
+++ b/src/Component/Contact/Contact.scss
@@ -2,7 +2,7 @@
   padding: 1rem;
   label {
     display: grid;
-    padding: 0 1rem;
+    padding-right: 1.2rem;
     gap: 0.2rem;
     opacity: 0;
     animation: fadeInUp 2s 2s forwards;
